--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -10,11 +10,13 @@ body {
 article {
 	display: grid;
 	grid-template-columns: [c0] 10vw [c1] auto [c2] auto [c3] 10vw [c4];
-  	grid-template-rows: [r0] 95vh [r1] auto [r2] 400px [r3];
+  	grid-template-rows: [r0] 95vh [r1] auto [r2] 100px [r3] auto [r4] 75px [r5];
   	grid-template-areas:
   		"header header header header"
-  		". sections sections ."
-  		"footer footer footer footer";
+		". sections sections ."
+		"media media media media"  
+		"footer footer footer footer"
+		"misc misc misc misc";
 }
 
 nav {
@@ -22,7 +24,7 @@ nav {
 	background-color: black;
 	position: fixed;
   	top: 0;
-  	height: calc(90px);
+  	height: 90px;
   	width: 100%;
   	z-index: 1;
   	display: flex;
@@ -30,8 +32,47 @@ nav {
   	align-items: center;
 }
 
+#hamburger {
+	position: fixed;
+	width: 400px;
+	height: 55vh;
+	z-index: 2;
+	background-color: black;
+	top: 90px;
+	left: 0px;
+	display: none;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	align-content: center;
+	border: black;
+}
+
+#hamburger div {
+	cursor: pointer;
+}
+
+.hamburger-content {
+	z-index: 3;
+	color: white;
+	/* padding-left: 85px; */
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+	width: calc(100% - 70px);
+	/* height: 100%; */
+	/* padding: auto auto auto 85px;
+	padding: auto auto auto 85px; */
+	flex-grow: 1;
+	padding-top: calc(2.5vh - 3px);
+	padding-left: 70px;
+}
+
+.hamburger-content:hover {
+	background-color: darkgray;
+}
+
 nav:first-child {
-	/*padding-left: 25px;*/
+	/* padding-left: 25px; */
 }
 
 nav:last-child {
@@ -41,6 +82,10 @@ nav:last-child {
 
 .nav-icon {
 	padding: 25px;
+}
+
+.nav-icon:first-child, .nav-icon:nth-child(2) {
+	z-index: 3;
 }
 
 .nav-icon img {
@@ -224,7 +269,7 @@ nav:last-child {
 .caption-description {
 	font-family: 'Open Sans', sans-serif;
 	font-size: calc(5px+.5vw);
-	padding-left: 5vw;
+	padding-left: 4vw;
 	max-width:55%;
 
 }
@@ -257,7 +302,7 @@ section {
 	display: flex;
 	justify-content: space-evenly;
 	align-items: center;
-	padding: 5px+.1vh;
+	padding: calc(5px + 2vw);
 	display: flex;
 	align-items: flex-center;
 	height: auto;
@@ -271,20 +316,40 @@ section:last-child {
 
 }
 
-footer {
-	background-color: green;
-	grid-area: footer;
-	width: 100%;
-	height: 100%;
 
-}
 
 .sect-img {
 	/*size: 20vw;*/
-	height: calc(200px + 15vw);
-	margin: 50px;
+	height: 100%;
+	/* margin: 50px; */
 	justify-self: start;
 }
+
+.img-container {
+	height: calc(250px + 15vw);
+	width: calc(250px + 15vw);
+	margin: 20px;
+	overflow: hidden;
+}
+
+
+
+
+#s2 img {
+	position: relative;
+	right: calc(300px - 9vw);
+}
+
+/* #s4 img {
+	position: relative;
+	right: calc(300px - 12vw);
+} */
+
+/* .sect-img:nth-child(1) {} */
+/* .sect-img:nth-child(1) {} */
+/* .sect-img:nth-child(1) {} */
+
+
 
 .text {
 	font-family: 'Open Sans', sans-serif;
@@ -301,4 +366,49 @@ footer {
 	text-align: center;
 	font-size: 4vw;
 	margin: 0px;
+}
+
+
+#media-buttons {
+	grid-area: media;
+	background-color: #f39a32;
+	
+}
+
+footer {
+	background-color: #f39a32;
+	grid-area: footer;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-content: center;
+	flex-wrap: wrap;
+	color: black;
+	font-family: 'Open Sans', sans-serif;
+	/* font-weight: bold; */
+
+}
+
+.footer-col {
+	width: 150px;
+	/* padding: 120px 10px; */
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
+.footer-col div {
+	padding: 2px;
+}
+
+.footer-col div:first-child {
+	padding: 5px 2px;
+	font-weight: bold;
+}
+
+#misc {
+	grid-area: misc;
+	background-color: #f39a32;
+
 }
